Remove BBS hard-coded URLs in the POC notebook
Prior to launching Jupyter Lab/Notebook it is now necessary
to define the following environment variables:

export SEARCH_ENGINE_URL="http://<host>:<port>"
export TEXT_MINING_URL="http://<host>:<port>"
export MYSQL_DB_URI="<host>:<port>"

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -20,6 +20,7 @@
     "import pathlib\n",
     "import requests\n",
     "import time\n",
+    "import sys\n",
     "\n",
     "import ipywidgets\n",
     "import networkx as nx\n",
@@ -201,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Search server URL"
+    "Configure the search server"
    ]
   },
   {
@@ -210,19 +211,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\", \"http://dgx1.bbp.epfl.ch:8850\")\n",
-    "assert SEARCH_ENGINE_URL is not None\n",
-    "\n",
-    "response = requests.post(\"{}/help\".format(SEARCH_ENGINE_URL))\n",
-    "assert response.ok and response.json()['name'] == 'SearchServer', \"The server is not accessible\"\n",
-    "print(f\"This server is using the database: {response.json()['database']}\")"
+    "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not SEARCH_ENGINE_URL:\n",
+    "    print(\"The variable SEARCH_ENGINE_URL is not set\", file=sys.stderr)\n",
+    "    print(f\"Please fix this before proceeding\", file=sys.stderr)\n",
+    "else:\n",
+    "    try:\n",
+    "        response = requests.post(f\"{SEARCH_ENGINE_URL}/help\")\n",
+    "    except requests.exceptions.RequestException as exc:\n",
+    "        print(f\"Could not connect to the search server on {SEARCH_ENGINE_URL}\", file=sys.stderr)\n",
+    "        print(f\"Error: {exc}\", file=sys.stderr)\n",
+    "        print(f\"Please fix this before proceeding\", file=sys.stderr)\n",
+    "    else:\n",
+    "        if not response.ok or response.json().get(\"name\") != \"SearchServer\":\n",
+    "            print(f\"The server at {SEARCH_ENGINE_URL} is not a valid search server\", file=sys.stderr)\n",
+    "        else:\n",
+    "            print(f\"Connected to the search server on {SEARCH_ENGINE_URL}\")\n",
+    "            print(f\"This server is using the database: {response.json().get('database')}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MySQL URL and engine"
+    "Configure the MySQL server"
    ]
   },
   {
@@ -231,8 +251,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MYSQL_DB_URI = os.getenv(\"MYSQL_DB_URI\", \"dgx1.bbp.epfl.ch:8853\")\n",
-    "bbs_mysql_engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:guest@{MYSQL_DB_URI}/cord19_v47')"
+    "MYSQL_DB_URI = os.getenv(\"MYSQL_DB_URI\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not MYSQL_DB_URI:\n",
+    "    print(\"The variable MYSQL_DB_URI is not set\", file=sys.stderr)\n",
+    "    print(f\"Please fix this before proceeding\", file=sys.stderr)\n",
+    "else:\n",
+    "    try:\n",
+    "        bbs_mysql_engine = sqlalchemy.create_engine(f\"mysql+pymysql://guest:guest@{MYSQL_DB_URI}/cord19_v65\")\n",
+    "        result = bbs_mysql_engine.execute(\"select 1\").fetchone()\n",
+    "    except sqlalchemy.exc.OperationalError as exc:\n",
+    "        print(f\"Can't connect to the MySQL server on {MYSQL_DB_URI}, please fix this before proceeding.\", file=sys.stderr)\n",
+    "        print(f\"Error: {exc}\", file=sys.stderr)\n",
+    "        print(f\"Please fix this before proceeding\", file=sys.stderr)\n",
+    "    else:\n",
+    "        print(f\"Connected to the MySQL server on {MYSQL_DB_URI}\")"
    ]
   },
   {
@@ -352,15 +392,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Configure the mining server"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\", \"http://dgx1.bbp.epfl.ch:8852\")\n",
-    "response = requests.post(TEXT_MINING_URL + \"/help\")\n",
-    "assert response.ok and response.json()['name'] == 'MiningServer'\n",
-    "print(f\"This server is using the database: {response.json()['database']}\")"
+    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not TEXT_MINING_URL:\n",
+    "    print(\"The variable TEXT_MINING_URL is not set\", file=sys.stderr)\n",
+    "    print(f\"Please fix this before proceeding\", file=sys.stderr)\n",
+    "else:\n",
+    "    try:\n",
+    "        response = requests.post(f\"{TEXT_MINING_URL}/help\")\n",
+    "    except requests.exceptions.RequestException as exc:\n",
+    "        print(f\"Could not connect to the server on {TEXT_MINING_URL}\", file=sys.stderr)\n",
+    "        print(f\"Error: {exc}\", file=sys.stderr)\n",
+    "        print(f\"Please fix this before proceeding\", file=sys.stderr)\n",
+    "    else:\n",
+    "        if not response.ok or response.json().get(\"name\") != \"MiningServer\":\n",
+    "            print(f\"The server at {TEXT_MINING_URL} is not a valid mining server\", file=sys.stderr)\n",
+    "        else:\n",
+    "            print(f\"Connected to the mining server on {TEXT_MINING_URL}\")\n",
+    "            print(f\"This server is using the database: {response.json().get('database')}\")"
    ]
   },
   {
@@ -765,9 +833,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BBS-BBG",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "devel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -779,7 +847,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   },
   "toc-autonumbering": true
  },
