Updated the BBS_BBG

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -43,7 +43,10 @@
     "import ipywidgets\n",
     "import networkx as nx\n",
     "import pandas as pd\n",
+    "\n",
     "import sqlalchemy\n",
+    "from sqlalchemy.sql import select\n",
+    "from sqlalchemy.sql import and_, or_, not_\n",
     "\n",
     "import jwt\n",
     "\n",
@@ -100,19 +103,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cord_analytics.utils import (generate_curation_table,\n",
-    "                                  link_ontology,\n",
-    "                                  generate_comention_analysis,\n",
-    "                                  build_cytoscape_data,\n",
-    "                                  merge_with_ontology_linking,\n",
-    "                                  resolve_taxonomy_to_types,\n",
-    "                                  list_papers)\n",
-    "            \n",
-    "from bbg_apps.curation_app import (curation_app)\n",
-    "from bbg_apps.visualization_app import (visualization_app)\n",
-    "from bbg_apps.topic_app import (TopicWidget, DataSaverWidget)\n",
+    "from kganalytics.export import load_network\n",
+    "from kganalytics.utils import top_n\n",
     "\n",
-    "from kganalytics.export import load_network"
+    "from cord19kg.utils import (generate_curation_table,\n",
+    "                            link_ontology,\n",
+    "                            generate_cooccurrence_analysis,\n",
+    "                            build_cytoscape_data,\n",
+    "                            resolve_taxonomy_to_types)\n",
+    "from cord19kg.apps.curation_app import curation_app\n",
+    "from cord19kg.apps.visualization_app import visualization_app\n",
+    "from cord19kg.apps.topic_widgets import (TopicWidget, DataSaverWidget)"
    ]
   },
   {
@@ -135,6 +136,7 @@
     "ONTOLOGY_LINKING_DATA_FILE = os.getenv(\"ONTOLOGY_LINKING_DATA_FILE\") \n",
     "assert (ONTOLOGY_LINKING_DATA_FILE is not None) \n",
     "linking = pd.read_pickle(ONTOLOGY_LINKING_DATA_FILE)\n",
+    "linking = linking.rename(columns=({\"_subclassof_label\": \"taxonomy\"}))\n",
     "print(\"Done.\")\n",
     "GRAPH_OBJECTS = {}"
    ]
@@ -188,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "widget = TopicWidget(forge, agent_username)\n",
+    "widget = TopicWidget(forge, TOKEN)\n",
     "widget.display()"
    ]
   },
@@ -452,6 +454,7 @@
     "print(\"Setting default term filters: the user can remove them later on in the UI if need be ...\")\n",
     "default_term_filters = 'Glucose; Covid-19; SARS-CoV-2; Diabetes; IL-1; ACE2; glycosylation; hyperglycemia; shock; fatigue; CVD; vasoconstriction; lactate; insulin; SP-D; HbA1c; LDH; glycolysis; GLUT; macrophage; lymphocytes; ventilation;SARS; ARDS; Cytokine Storm; pneumonia; multi-organs failure; thrombosis; inflammation; IL-6; CRP; D-Dimer; Ferritin; Lung Disease; Hypertension; Aging; COPD; angiotensin 2 (or angiotensin II or AngII); Obesity; ICU (intensive care unit); ventilation; ketogenic diet'.split(\"; \")\n",
     "filtered_table_extractions = table_extractions.copy()\n",
+    "filtered_table_extractions = filtered_table_extractions.rename(columns={\"paper_id\": \"occurrence\"})\n",
     "\n",
     "default_found_term_filters = set() \n",
     "for term_filter in default_term_filters:\n",
@@ -542,7 +545,7 @@
    "outputs": [],
    "source": [
     "type_data = curated_table_extractions[[\"entity_type\"]].rename(columns={\"entity_type\": \"type\"})\n",
-    "graphs, trees = generate_comention_analysis(\n",
+    "graphs, trees = generate_cooccurrence_analysis(\n",
     "    curated_table_extractions,  curation_meta_data[\"factor_counts\"],\n",
     "    n_most_frequent=curation_meta_data[\"n_most_frequent\"], type_data=type_data, \n",
     "    factors=[\"paper\", \"paragraph\"], keep=curation_meta_data[\"factor_counts\"], cores=10)\n",
@@ -583,69 +586,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "paper_graph = None\n",
-    "paragraph_graph = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n",
-    "PRECOMPUTED_GRAPH_PATH_PREFIX = os.getenv(\"PRECOMPUTED_GRAPH_PATH_PREFIX\") \n",
-    "assert (PRECOMPUTED_GRAPH_PATH_PREFIX is not None) \n",
-    "\n",
-    "print(\"Loading pre-generated graphs with 3'000 entities...\")\n",
-    "print(\"\\t - paper-based network\")\n",
-    "paper_graph = load_network(\"{}_paper_edge_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX), \"{}_paper_node_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX))\n",
-    "paper_spanning_tree = load_network(\"{}_paper_tree_edge_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX), \"{}_paper_tree_node_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX))\n",
-    "nx.set_node_attributes(\n",
-    "    paper_spanning_tree, {\n",
-    "        n: len(paper_spanning_tree.nodes[n][\"paper\"])\n",
-    "        for n in paper_spanning_tree.nodes()\n",
-    "    },\n",
-    "    \"paper_frequency\")\n",
-    "\n",
-    "print(\"\\t - paragraph-based network\")\n",
-    "paragraph_graph = load_network(\"{}_paragraph_edge_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX), \"{}_paragraph_node_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX))\n",
-    "paragraph_spanning_tree = load_network(\"{}_paragraph_tree_edge_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX), \"{}_paragraph_node_list.pkl\".format(PRECOMPUTED_GRAPH_PATH_PREFIX))\n",
-    "nx.set_node_attributes(\n",
-    "    paragraph_spanning_tree, {\n",
-    "        n: len(paragraph_spanning_tree.nodes[n][\"paper\"])\n",
-    "        for n in paragraph_spanning_tree.nodes()\n",
-    "    },\n",
-    "    \"paper_frequency\")\n",
-    "print(\"Done.\")\n",
-    "\n",
-    "print(\"Loading pre-computed node positions...\")\n",
-    "\n",
-    "PRECOMPUTED_PAPER_GRAPH_POSITIONS = os.getenv(\"PRECOMPUTED_PAPER_GRAPH_POSITIONS\") \n",
-    "assert (PRECOMPUTED_PAPER_GRAPH_POSITIONS is not None)\n",
-    "with open(PRECOMPUTED_PAPER_GRAPH_POSITIONS, \"r\") as f:\n",
-    "    paper_positions = json.load(f)\n",
-    "\n",
-    "PRECOMPUTED_PARAGRAPH_GRAPH_POSITIONS = os.getenv(\"PRECOMPUTED_PARAGRAPH_GRAPH_POSITIONS\") \n",
-    "assert (PRECOMPUTED_PARAGRAPH_GRAPH_POSITIONS is not None)\n",
-    "with open(PRECOMPUTED_PARAGRAPH_GRAPH_POSITIONS, \"r\") as f:\n",
-    "    paragraph_positions = json.load(f)\n",
-    "print(\"Done.\")\n",
-    "\n",
-    "\n",
-    "print(\"Building a cytoscape representation of loaded graphs...\")\n",
-    "paper_3000_cyto = build_cytoscape_data(paper_spanning_tree, positions=paper_positions)\n",
-    "paragraph_3000_cyto = build_cytoscape_data(paragraph_spanning_tree, positions=paragraph_positions)\n",
-    "print(\"Done.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if loaded_graphs is not None:\n",
     "    for g, data in loaded_graphs.items():\n",
     "        GRAPH_OBJECTS[g] = {\n",
@@ -654,21 +594,6 @@
     "            \"default_top_n\": 100\n",
     "        }\n",
     "\n",
-    "# Add precomputed graphs\n",
-    "if paper_graph and paragraph_graph:\n",
-    "    GRAPH_OBJECTS.update({\n",
-    "        \"Naive pre-computed network (paper-based, 3000)\": {\n",
-    "            \"graph\": paper_graph,\n",
-    "            \"tree\": paper_spanning_tree,\n",
-    "            \"positions\": paper_positions\n",
-    "        },\n",
-    "        \"Naive pre-computed network (paragraph-based, 3000)\": {\n",
-    "            \"graph\": paragraph_graph,\n",
-    "            \"tree\": paragraph_spanning_tree,\n",
-    "            \"positions\": paragraph_positions,\n",
-    "        }\n",
-    "    })\n",
-    "    \n",
     "for k, v in GRAPH_OBJECTS.items():\n",
     "    tree = v[\"tree\"] if \"tree\" in v else None\n",
     "    positions = v[\"positions\"] if \"positions\" in v else None  \n",
@@ -680,11 +605,58 @@
     "\n",
     "if visualization_configs is None:\n",
     "    visualization_app.set_current_graph(\"Topic-centered network (paper-based)\")\n",
-    "    \n",
+    "\n",
+    "# Set paper meta-data look up callback\n",
+    "def list_papers(mysql_engine, papers, limit=200):\n",
+    "    META_DATA = sqlalchemy.MetaData(bind=mysql_engine, reflect=True)\n",
+    "    articles = META_DATA.tables[\"articles\"]\n",
+    "    clauses = or_( *[articles.c.article_id == x for x in papers[:limit]] )\n",
+    "    s = select([\n",
+    "        articles.c.title,\n",
+    "        articles.c.authors,\n",
+    "        articles.c.abstract,\n",
+    "        articles.c.doi,\n",
+    "        articles.c.url,\n",
+    "        articles.c.journal,\n",
+    "        articles.c.pmcid,\n",
+    "        articles.c.pubmed_id,\n",
+    "        articles.c.publish_time\n",
+    "    ]).where(clauses)\n",
+    "    result = mysql_engine.execute(s)\n",
+    "    results = []\n",
+    "    for row in result:\n",
+    "        results.append(row)\n",
+    "    return results    \n",
     "visualization_app.set_list_papers_callback(lambda x: list_papers(bbs_mysql_engine, x))\n",
+    "\n",
+    "# Set definitions look up callback\n",
     "definitions = linking[[\"concept\", \"definition\"]].groupby(\"concept\").aggregate(lambda x: list(x)[0]).to_dict()[\"definition\"]\n",
     "visualization_app.set_entity_definitons(definitions)\n",
     "visualization_app._db_error_message = \"Failed to retreive papers (check if the variable 'bbs_mysql_engine' was initialized or check the DB connection)\"\n",
+    "\n",
+    "# Set aggregated entities look up callback\n",
+    "def get_aggregated_entities(entity, n):\n",
+    "    if \"aggregated_entities\" in curated_table_extractions.columns:\n",
+    "        aggregated = curated_table_extractions.loc[entity][\"aggregated_entities\"]\n",
+    "    else:\n",
+    "        aggregated = [entity]\n",
+    "    if table_extractions is not None:\n",
+    "        df = curation_input_table.set_index(\"entity\")\n",
+    "        if entity in curated_table_extractions.index:\n",
+    "            freqs = df.loc[aggregated][\"paper_frequency\"].to_dict()\n",
+    "        else:\n",
+    "            return {}\n",
+    "    else:\n",
+    "        df = table_extractions.copy()\n",
+    "        df[\"entity\"] = data[\"entity\"].apply(lambda x: x.lower())\n",
+    "        freqs = df[df[\"entity\"].apply(lambda x: x.lower() in aggregated)].groupby(\"entity\").aggregate(\n",
+    "            lambda x: len(x))[\"entity_type\"].to_dict()\n",
+    "    if len(freqs) == 0:\n",
+    "        return {}\n",
+    "    return {e: freqs[e] for e in top_n(freqs, n)}\n",
+    "\n",
+    "visualization_app.set_aggregated_entities_callback(\n",
+    "    lambda x: get_aggregated_entities(x, 10))\n",
     "\n",
     "if visualization_configs is not None:\n",
     "    visualization_app._current_graph = visualization_configs[\"current_graph\"]\n",
@@ -773,20 +745,13 @@
     "\n",
     "saver_widget.display()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "BBS-BBG",
    "language": "python",
-   "name": "python3"
+   "name": "devel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -798,7 +763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   },
   "toc-autonumbering": true
  },
