Replace MYSQL_DB_URI by DB_URL in POC notebook

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MYSQL_DB_URI = os.getenv(\"MYSQL_DB_URI\")"
+    "DB_URL = os.getenv(\"DB_URL\")"
    ]
   },
   {
@@ -260,19 +260,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not MYSQL_DB_URI:\n",
-    "    print(\"The variable MYSQL_DB_URI is not set\", file=sys.stderr)\n",
+    "if not DB_URL:\n",
+    "    print(\"The variable DB_URL is not set\", file=sys.stderr)\n",
     "    print(f\"Please fix this before proceeding\", file=sys.stderr)\n",
     "else:\n",
     "    try:\n",
-    "        bbs_mysql_engine = sqlalchemy.create_engine(f\"mysql+pymysql://guest:guest@{MYSQL_DB_URI}/cord19_v47\")\n",
+    "        bbs_mysql_engine = sqlalchemy.create_engine(f\"mysql+pymysql://guest:guest@{DB_URL}\")\n",
     "        result = bbs_mysql_engine.execute(\"select 1\").fetchone()\n",
     "    except sqlalchemy.exc.OperationalError as exc:\n",
-    "        print(f\"Can't connect to the MySQL server on {MYSQL_DB_URI}, please fix this before proceeding.\", file=sys.stderr)\n",
+    "        print(f\"Can't connect to the MySQL server on {DB_URL}, please fix this before proceeding.\", file=sys.stderr)\n",
     "        print(f\"Error: {exc}\", file=sys.stderr)\n",
     "        print(f\"Please fix this before proceeding\", file=sys.stderr)\n",
     "    else:\n",
-    "        print(f\"Connected to the MySQL server on {MYSQL_DB_URI}\")"
+    "        print(f\"Connected to the MySQL server on {DB_URL}\")"
    ]
   },
   {
