Fix wrongly deleted line

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -29,8 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-02-10T13:33:02.595429Z",
+     "iopub.status.busy": "2021-02-10T13:33:02.593236Z",
+     "iopub.status.idle": "2021-02-10T13:33:06.082096Z",
+     "shell.execute_reply": "2021-02-10T13:33:06.081024Z",
+     "shell.execute_reply.started": "2021-02-10T13:33:02.595259Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import getpass\n",
@@ -56,8 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-02-10T13:33:07.472820Z",
+     "iopub.status.busy": "2021-02-10T13:33:07.469178Z",
+     "iopub.status.idle": "2021-02-10T13:33:07.482029Z",
+     "shell.execute_reply": "2021-02-10T13:33:07.479737Z",
+     "shell.execute_reply.started": "2021-02-10T13:33:07.472746Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pd.options.mode.chained_assignment = None"
@@ -65,8 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-02-10T13:33:08.060323Z",
+     "iopub.status.busy": "2021-02-10T13:33:08.059798Z",
+     "iopub.status.idle": "2021-02-10T13:33:08.555360Z",
+     "shell.execute_reply": "2021-02-10T13:33:08.554040Z",
+     "shell.execute_reply.started": "2021-02-10T13:33:08.060246Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from jupyter_dash.comms import _send_jupyter_config_comm_request, _jupyter_config\n",
@@ -79,8 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-02-10T13:33:10.686079Z",
+     "iopub.status.busy": "2021-02-10T13:33:10.685566Z",
+     "iopub.status.idle": "2021-02-10T13:33:10.691962Z",
+     "shell.execute_reply": "2021-02-10T13:33:10.690558Z",
+     "shell.execute_reply.started": "2021-02-10T13:33:10.686015Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# JupyterDash configs\n",
@@ -89,9 +121,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-02-10T13:33:11.420922Z",
+     "iopub.status.busy": "2021-02-10T13:33:11.420117Z",
+     "iopub.status.idle": "2021-02-10T13:33:17.127596Z",
+     "shell.execute_reply": "2021-02-10T13:33:17.121873Z",
+     "shell.execute_reply.started": "2021-02-10T13:33:11.420840Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "Unable to communicate with the jupyter_dash notebook or JupyterLab \nextension required to infer Jupyter configuration.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-44ad1f4b927e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mJupyterDash\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfer_jupyter_proxy_config\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mcyto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_extra_layouts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Code/BlueBrain/Search/venv/lib/python3.7/site-packages/jupyter_dash/jupyter_app.py\u001b[0m in \u001b[0;36minfer_jupyter_proxy_config\u001b[0;34m(cls)\u001b[0m\n\u001b[1;32m     71\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m             \u001b[0;31m# Assume classic notebook or JupyterLab\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m             \u001b[0m_request_jupyter_config\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mserver_url\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Code/BlueBrain/Search/venv/lib/python3.7/site-packages/jupyter_dash/comms.py\u001b[0m in \u001b[0;36m_request_jupyter_config\u001b[0;34m(timeout)\u001b[0m\n\u001b[1;32m     61\u001b[0m             \u001b[0;31m# give up\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m             raise EnvironmentError(\n\u001b[0;32m---> 63\u001b[0;31m                 \u001b[0;34m\"Unable to communicate with the jupyter_dash notebook or JupyterLab \\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     64\u001b[0m                 \u001b[0;34m\"extension required to infer Jupyter configuration.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m             )\n",
+      "\u001b[0;31mOSError\u001b[0m: Unable to communicate with the jupyter_dash notebook or JupyterLab \nextension required to infer Jupyter configuration."
+     ]
+    }
+   ],
    "source": [
     "time.sleep(3)\n",
     "JupyterDash.infer_jupyter_proxy_config()\n",
@@ -831,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.9"
   },
   "toc-autonumbering": true
  },
